# LearnOpenGL

./: .gitmodules  README.md  build_glew.sh  build_glfw.sh  build_tinygltf.sh
engine/: .gitignore  CMakeLists.txt  fragShader.glsl  main.cpp  vertShader.glsl
engine/include/: utils.hpp
engine/res/: fragShader.glsl  vertShader.glsl
engine/src/: main.cpp
